# ITER-magnetics-diagnostic-analysis

./: .gitignore  README.md  pyproject.toml
data/preprocessed/mscred/: created_anomalies_mscred.json  selected_channels_mscred.json
notebooks/experiments/: README.md  efit++_analysis.ipynb  mscred_test_synthetic_data.ipynb  pendulum_scinet.pth  scinet_on_abnormal_data.ipynb  scinet_on_synthetic_pendulum.ipynb  spectral_signature.ipynb  test_synthetic_data.ipynb  trend_season_test.ipynb  vae_test_loop_pipline.ipynb
notebooks/exploration/: README.md  cleaned_dataframe_opening_test.ipynb  dataframe_opening_test.ipynb  mast_metadata_analysis.ipynb  mast_shots_choice.ipynb  scrapped_dataframe_analysis.ipynb  scrapped_dataframe_opening_test.ipynb
notebooks/result_files/all_shots_magnetics/: result_lists_magnetics.json
notebooks/result_files/efit_analysis/: efit_analysis.csv
notebooks/result_files/nan_stats_magnetics/: nan_stats_by_shot_mscred.csv  nan_stats_per_shot_mscred.csv  result_lists_magnetics_nans.json
notebooks/result_files/non_increasing/: non_increasing_shot_id.csv
results/model_params/mscred/: model1.pth
results/model_params/scinet/: pendulum_scinet1.pth  pendulum_scinet2.pth  pendulum_scinet3.pth  pendulum_scinet4.pth  pendulum_scinet_final.pth
scripts/: job_train_mscred.sh  slurm-605669.out  slurm-605912.out  slurm-606200.out  slurm-606477.out
src/data/: __init_.py
src/magnetics_diagnostic_analysis/: __init__.py  __main__.py
src/magnetics_diagnostic_analysis/data/: __init_.py  data_downloading.py
src/magnetics_diagnostic_analysis/data_analysis/: README.md  __init__.py  dataframe_analysis.ipynb  metadata_analysis.ipynb
src/magnetics_diagnostic_analysis/data_downloading/: README.md  __init__.py  data_downloading.py  data_washing.py  (+1 more)
src/project/: __init__.py
src/tests/: __init__.py
tests/: test_opening.py
tests/test_mscred/: test_convlstm_arch.py  test_mscred_arch.py
tests/test_scinet/: test_scinet.py
tests/test_vae/: test_vae_arch.py
(+63 files in other folders)
