[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnetics-diagnostic-analysis"
version = "0.1.0"
description = "Try to find faulty signal in diagnostics by self-supervised learning."
authors = [{ name = "Louis Brusset", email = "louis.brusset@etu.minesparis.psl.eu" }]
requires-python = ">=3.9, <3.12"
readme = "README.md"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "torch",
    "torchinfo",
    "xarray",
    "zarr",
    "requests",
    "tqdm",
    "ipykernel"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

